# Visual3_2310010076

./: CrudDB.py  README.md  admin.py  admin.ui  bayar.py  bayar.ui  form.ui  main.py  main.ui  mustahik.py  mustahik.ui  muzaki.py  muzaki.ui  pyproject.toml  ui_admin.py  ui_bayar.py  ui_main.py  ui_mustahik.py  ui_muzaki.py  ui_zakat.py  ui_zakatkeluar.py  ui_zakatmasuk.py  visual3_2310010076.sql  zakat.py  zakat.ui  zakatkeluar.py  zakatkeluar.ui  zakatmasuk.py  zakatmasuk.ui
